<resources>
    <string name="app_name">EcommApp</string>
    <string name="app_id">57c432ae</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="home_image_view_text">首页</string>
    <string name="pond_image_view_text">鱼塘</string>
    <string name="message_image_view_text">消息</string>
    <string name="mine_image_view_text">我的</string>
    <string name="home_edittext_hint">请输入宝贝关键字</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="cpay_keyboard_clear">清除</string>
    <string name="search_no_title">"抱歉,没有找到与 \""</string>
    <string name="search_no_end">"\" 相关的宝贝"</string>
    <string name="search_tip">您可以输入宝贝代码，简称或者拼音首字母开始查找</string>
    <string name="share_weibo">微博</string>
    <string name="share_weixin">微信</string>
    <string name="share_weixin_moment">朋友圈</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="account">帐号:</string>
    <string name="password">密码:</string>
    <string name="login">登 陆</string>
    <string name="unlogin">您还未登陆哦.</string>
    <string name="login_now">马上登陆</string>
    <string name="video_play_setting">视频播放设置</string>
    <string name="auto_player_always">3G/4G和Wifi</string>
    <string name="auto_player_only_wifi">仅Wifi</string>
    <string name="auto_player_never">关闭</string>
    <string name="video_setting">视频播放环境条件</string>
    <string name="share">分享给朋友</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="please_wait">加载中...</string>
    <string name="personal_info">的个人主页</string>
    <string name="message">消息</string>
    <string name="unread_message">留言</string>
    <string name="unread_message_info">还没有收到留言.</string>
    <string name="zan_message">收到的赞</string>
    <string name="zan_message_info">还没有收到的赞.</string>
    <string name="imooc_message">慕课网</string>
    <string name="imooc_message_info">再不学习慕女神不喜欢你了.</string>
    <string name="update_info">版本更新</string>
    <string name="jpush_message_type">消息类型:</string>
    <string name="jpush_message_content">消息内容:</string>
    <string name="jpush_message_title">推送消息</string>
    <string name="video">视频</string>
    <string name="login_forget_pass">忘记密码</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="count_down_timer_reset_code_format">%1$d 秒</string>
    <string name="reset_password">重置密码</string>
    <string name="hint_input_code">请输入手机验证码</string>
    <string name="reset_code">发送验证码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_confirm_new_password">请再次输入新密码</string>
    <string name="opt_confirm">确定</string>
    <string name="share_title">电商小应用</string>
    <string name="share_content">欢迎使用电商小应用，下载地址https://fir.im/pl8r</string>
    <string name="share_error">分享失败</string>
    <string name="share_complete">分享成功</string>
    <string name="share_cancel">分享取消</string>
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the
        device.
    </string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="preferences_vibrate">preferences_vibrate</string>
    <string name="preferences_play_beep">preferences_play_beep</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preview_msg">&#160;preview pages available,click Download for more.</string>
    <string name="update_title">快下载更新体验一下吧</string>
    <string name="update_new_version">您有新版本</string>
    <string name="update_install">安装</string>
    <string name="update_download_failed">下载失败</string>
    <string name="update_download_failed_msg">下载失败，请检查网络连接或 SD卡存储空间</string>
    <string name="update_download_start">开始下载</string>
    <string name="update_download_processing">正在下载</string>
    <string name="update_download_finish">下载完成</string>
    <string name="update_download_tip">提示</string>
    <string name="no_new_version_title">已是最新版</string>
    <string name="no_new_version_msg">您当前已经是最新版本，无需更新。</string>
    <string name="confirm">确定</string>
    <string name="tian_qian">%1$d天前</string>
    <string name="dian_zan">点赞</string>
    <string name="welcom_head_01">来慕课网学习吧</string>
    <string name="welcom_content_01">来慕课网你可以学到任何你想学的知识.</string>
    <string name="welcom_head_02">学会分享</string>
    <string name="welcom_content_02">分享即可以帮助他人,也可以提升自己,何乐而不为.</string>
    <string name="welcom_head_03">学会利用网络</string>
    <string name="welcom_content_03">通过互联网,可以学到任何我们想学的知识,所以你要利用好.</string>
    <string name="welcom_head_04">提高效率,少熬夜</string>
    <string name="welcom_content_04">设法提高我们的工作效率,而不是延长我们的工作时间.</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_history_summary">Store your scans in History</string>
</resources>