<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        style="@style/Widget.Design.Admin.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.com.ecommapp.view.CompatToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.Widget.Design.Admin.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/message" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_message_unread" />

        <TextView
            android:id="@+id/unread_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/message_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/message_view"
            android:text="@string/unread_message"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tip_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/message_view"
            android:layout_alignLeft="@id/unread_message_view"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/message_view"
            android:text="@string/unread_message_info"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/zan_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_message_zan" />

        <TextView
            android:id="@+id/zan_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/zan_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/zan_view"
            android:text="@string/zan_message"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/zan_message_info_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/zan_view"
            android:layout_alignLeft="@id/zan_message_view"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/zan_message_view"
            android:text="@string/zan_message_info"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd" />
</LinearLayout>
