<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_home"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/home_selector"
            android:gravity="center"
            android:text="@string/home_image_view_text"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_message"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/message_selector"
            android:gravity="center"
            android:text="@string/message_image_view_text"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/person_selector"
            android:gravity="center"
            android:text="@string/mine_image_view_text"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/radioGroup" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/radioGroup"
        android:background="@color/color_333333" />
</RelativeLayout>
